--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background: #8ecae6;
+  min-height: "100vh";
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +9,76 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form-container {
+  margin: 100px auto;
+  width: 600px;
+  position: relative;
+  border-radius: 10px;
+  height: 600px;
+  background: #219ebc;
+  display: grid;
+  grid-template-columns: 1fr; 
+} 
+
+.form-control {
+  margin-bottom: 0.5rem;
+  width: 80%;
+}
+
+.form {
+  width: 600px;
+  margin: auto;
+  min-height: "100vh";
+  position: relative;
+  z-index: 1;
+  background: #f1faee;
+  max-width: 500px;
+  margin: 0 auto 100px;
+  padding: 50px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); 
+} 
+
+.form h1 {
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: #023047;
+}
+
+.form input {
+  outline: 0;
+  background: #e8e8e4;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 20px;
+}
+
+.form-label {
+  display: inline-block;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  color: #023047;
+}
+
+.form-input-btn {
+  text-transform: uppercase;
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #023047;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.form-input-btn:hover {
+  background: #f4a261;
+}
+
+.checkbox {
+  height: 20px;
+  width: auto;
 }
